Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -66,6 +66,7 @@
 %\usepackage{amssymb}
 \usepackage[margin=0.1cm]{subcaption}
 \usepackage{multicol}
+\usepackage{refcount}
 
 \usepackage{breakurl} % Break URL
 \usepackage{multirow}
@@ -623,10 +624,8 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 \input{d06-scheme-summary}
 
 
-%\clearpage
-
-
-%\input{scratch}
+\clearpage
+\input{scratch}
 
 
 \bibliographystyle{unsrt}
