--- a/a01-modulo.tex
+++ b/a01-modulo.tex
@@ -43,7 +43,7 @@ This means that $a$ and $b$ are congruent modulo $q$ if and only if $a$ and $b$ 
 
 The supported modulo operations are addition, subtraction, and multiplication. The properties of these modulo operations are as follows:
 
-\begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:group-def}.1} Properties of Modulo Operations}}]
+\begin{tcolorbox}[title={\textbf{\tboxtheorem{\getrefnumber{subsec:group-def}.1} Properties of Modulo Operations}}]
 For any integer $x$, the following is true:
 
 \begin{enumerate}
