Updates from Overleaf

--- a/d05-rns.tex
+++ b/d05-rns.tex
@@ -76,7 +76,7 @@ $ $
 
 The output of this \textsf{FastBConv} function is a list of RNS residues $(c_1, c_2, \cdots, c_l)$ having the prime moduli $(b_1, b_2, \cdots, b_l)$ as the base. This RNS vector represents the big value 
 
-$c = \left(\sum\limits_{i=1}^k c_i\cdot y'_i \cdot z'_i\right) \bmod b = \left(\sum\limits_{i=1}^k |c_i\cdot z'_i|_{b_i} \cdot y'_i\right) \bmod b$ \textcolor{red}{ \# where $y'_i = \dfrac{b}{b_i}$ and $z'_i = y_{i}'^{-1} \bmod b_i$}
+$c = \left(\sum\limits_{i=1}^k c_i\cdot y'_i \cdot z'_i\right) \bmod b = \left(\sum\limits_{i=1}^k |c_i\cdot z'_i|_{b_i} \cdot y'_i\right) \bmod b$ \textcolor{red}{ \# where $y'_i = \dfrac{b}{b_i}$ and $z'_i = {y_{i}'}^{-1} \bmod b_i$}
 
 $ $
 
