Updates from Overleaf

--- a/d05-rns.tex
+++ b/d05-rns.tex
@@ -126,9 +126,9 @@ $ $
 $ $
 
 
-${\textsf{ModRaise\textsubscript{RNS}}(\{x_i\}_{i=1}}^k, q, qb)$ \textcolor{red}{ \# where $q$ and $b$ are co-prime}
+$\textsf{ModRaise\textsubscript{RNS}}({\{x_i\}_{i=1}}^k, q, qb)$ \textcolor{red}{ \# where $q$ and $b$ are co-prime}
 
-$= {\textsf{FastBConv\textsubscript{RNS}}(\{x_i\}_{i=1}}^k, q, qb)$ 
+$= \textsf{FastBConv\textsubscript{RNS}}({\{x_i\}_{i=1}}^k, q, qb)$ 
 
 $ = (x_1, x_2, \cdots, x_k, \textsf{FastBConv}(\{x_i\}_{i=1}^k, q, b))$ 
 
