Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -289,6 +289,7 @@ These parts are designed in an incremental manner, and therefore understanding e
 
 $ $
 
+The PDF version is available at \href{https://arxiv.org/abs/2503.05136}{Arxiv} and 
 Please report any bugs or suggestions regarding the draft to the \href{https://github.com/gogo9th/fhe-textbook/issues}{\textbf{GitHub Issues Board}}. 
 
 \end{abstract}
@@ -625,8 +626,8 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 \input{d06-scheme-summary}
 
 
-\clearpage
-\input{scratch}
+%\clearpage
+%\input{scratch}
 
 
 \bibliographystyle{unsrt}
