--- a/00-main.tex
+++ b/00-main.tex
@@ -289,8 +289,8 @@ These parts are designed in an incremental manner, and therefore understanding e
 
 $ $
 
-The PDF version is available at \href{https://arxiv.org/abs/2503.05136}{Arxiv} and 
-Please report any bugs or suggestions regarding the draft to the \href{https://github.com/gogo9th/fhe-textbook/issues}{\textbf{GitHub Issues Board}}. 
+This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a tentative \href{https://fhetextbook.github.io}{\textbf{Website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{makt4ht}). 
+Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. 
 
 \end{abstract}
 
