Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -289,7 +289,7 @@ These parts are designed in an incremental manner, and therefore understanding e
 
 $ $
 
-This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a tentative \href{https://fhetextbook.github.io}{\textbf{Website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{makt4ht}). 
+This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a \href{https://fhetextbook.github.io}{\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{makt4ht}). 
 Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. 
 
 \end{abstract}
