--- a/00-main.tex
+++ b/00-main.tex
@@ -247,7 +247,7 @@
 
 \begin{document}
 \title{\Huge{\textbf{The Beginner's Textbook}}\\ \Huge{\textbf{for Fully Homomorphic Encryption}}}
-\author{\textbf{Ronny Ko}\\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
+\author{\textbf{}\\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
 \date{January 1, 2025}
 
 
@@ -289,7 +289,7 @@ These parts are designed in an incremental manner, and therefore understanding e
 
 $ $
 
-This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a \href{https://fhetextbook.github.io}{\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{makt4ht}). 
+This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a \href{https://fhetextbook.github.io}{\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
 Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. 
 
 \end{abstract}
@@ -626,8 +626,8 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 \input{d06-scheme-summary}
 
 
-%\clearpage
-%\input{scratch}
+\clearpage
+\input{scratch}
 
 
 \bibliographystyle{unsrt}
