Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -285,11 +285,11 @@ $ $
 
 $ $
 
-These parts are designed in an incremental manner, and therefore understanding each part requires the understanding of its prior part(s). 
+%These parts are designed in an incremental manner, and therefore understanding each part requires the understanding of its prior part(s). 
 
-$ $
+%$ $
 
-This book is available as both an \href{https://arxiv.org/abs/2503.05136}{\textbf{Arxiv PDF}} and a \href{https://fhetextbook.github.io}{\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
+This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on a \href{https://fhetextbook.github.io} {\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
 Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. 
 
 \end{abstract}
@@ -626,8 +626,8 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 \input{d06-scheme-summary}
 
 
-\clearpage
-\input{scratch}
+%\clearpage
+%\input{scratch}
 
 
 \bibliographystyle{unsrt}
